--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1060,7 +1060,7 @@ body {
     font-size: 25px;
   }
 }
-.our_news .card-link {
+.our_news .hire_view_details, .our_news .card-link {
   font-size: 16px;
   font-family: "Roboto";
   color: #0ad3ef;
@@ -1072,11 +1072,11 @@ body {
   display: inline;
 }
 @media only screen and (min-width: 992px) {
-  .our_news .card-link {
+  .our_news .hire_view_details, .our_news .card-link {
     font-size: 20px;
   }
 }
-.our_news .card-link .fa-angle-right {
+.our_news .hire_view_details .fa-angle-right, .our_news .card-link .fa-angle-right {
   font-size: 15px;
   color: #0ad3ef;
   margin-left: 10px;
@@ -1582,6 +1582,35 @@ footer .footer_ending .container .bannar_text {
 }
 .hire .partner_overlay {
   padding-bottom: 0px;
+}
+.hire .partner_overlay a {
+  text-decoration: none;
+  padding: 0px;
+  margin: 0px;
+}
+.hire .partner_overlay img:hover {
+  opacity: 0.6;
+}
+.hire .row .hire_view_details {
+  font-size: 16px;
+  font-family: "Roboto";
+  color: #0ad3ef;
+  line-height: 1.5;
+  margin: 0px;
+  padding: 0px;
+  font-weight: 300;
+  text-decoration: none;
+  display: inline;
+}
+@media only screen and (min-width: 992px) {
+  .hire .row .hire_view_details {
+    font-size: 18px;
+  }
+}
+.hire .row .hire_view_details .fa-angle-right {
+  font-size: 15px;
+  color: #0ad3ef;
+  margin-left: 10px;
 }
 
 .testimonial_section {
@@ -2201,4 +2230,48 @@ footer .footer_ending .container .bannar_text {
   100% {
     transform: rotate(-15deg);
   }
+}
+.team_details .lets_get_sec_overlay {
+  padding: 40px 0px;
+}
+.team_details .lets_get_sec_overlay .team_dtls_heding {
+  font-size: 20px;
+  color: white;
+  text-align: center;
+  font-family: "Roboto";
+  margin: 0px;
+  padding-bottom: 20px;
+}
+@media only screen and (min-width: 600px) {
+  .team_details .lets_get_sec_overlay .team_dtls_heding {
+    font-size: 30px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .team_details .lets_get_sec_overlay .team_dtls_heding {
+    font-size: 35px;
+    padding-bottom: 40px;
+  }
+}
+
+.team_details_box {
+  border: 1px solid #bfc8e9;
+  border-radius: 20px;
+}
+.team_details_box .col-md-4 {
+  position: relative;
+}
+.team_details_box .col-md-4 .image_back {
+  width: 40%;
+  height: 200px;
+  background-color: #0ad3ef;
+  margin-left: -20px;
+  border-radius: 20px;
+}
+.team_details_box .col-md-4 img {
+  width: 80%;
+  position: absolute;
+  left: 10px;
+  bottom: 20px;
+  border-radius: 30px;
 }/*# sourceMappingURL=style.css.map */
