--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1060,7 +1060,8 @@ body {
     font-size: 25px;
   }
 }
-.our_news .hire_view_details, .our_news .card-link {
+.our_news .hire_view_details,
+.our_news .card-link {
   font-size: 16px;
   font-family: "Roboto";
   color: #0ad3ef;
@@ -1072,11 +1073,13 @@ body {
   display: inline;
 }
 @media only screen and (min-width: 992px) {
-  .our_news .hire_view_details, .our_news .card-link {
+  .our_news .hire_view_details,
+  .our_news .card-link {
     font-size: 20px;
   }
 }
-.our_news .hire_view_details .fa-angle-right, .our_news .card-link .fa-angle-right {
+.our_news .hire_view_details .fa-angle-right,
+.our_news .card-link .fa-angle-right {
   font-size: 15px;
   color: #0ad3ef;
   margin-left: 10px;
@@ -1818,7 +1821,8 @@ footer .footer_ending .container .bannar_text {
   display: inline-block;
   width: 100%;
 }
-.blog_side_bar .latest_tweets a, .blog_side_bar .latest_tweets .latest_tweet_para {
+.blog_side_bar .latest_tweets a,
+.blog_side_bar .latest_tweets .latest_tweet_para {
   font-size: 14px;
   font-family: "Roboto";
   color: #bfc8e9;
@@ -1829,7 +1833,8 @@ footer .footer_ending .container .bannar_text {
   text-decoration: none;
 }
 @media only screen and (min-width: 992px) {
-  .blog_side_bar .latest_tweets a, .blog_side_bar .latest_tweets .latest_tweet_para {
+  .blog_side_bar .latest_tweets a,
+  .blog_side_bar .latest_tweets .latest_tweet_para {
     font-size: 16px;
   }
 }
@@ -2238,7 +2243,7 @@ footer .footer_ending .container .bannar_text {
 }
 .team_details .lets_get_sec_overlay {
   padding: 40px 0px;
-  background-color: rgba(0, 0, 0, 0.1882352941);
+  background-color: #fff;
 }
 .team_details .lets_get_sec_overlay .team_dtls_heding {
   font-size: 20px;
@@ -2271,18 +2276,68 @@ footer .footer_ending .container .bannar_text {
   padding: 10px;
   margin-bottom: 15px;
 }
-.team_details .team_details_innr_boxes .team_member_details {
+.team_details .team_member_details {
   font-size: 16px;
   color: #312d2d;
   font-family: "Roboto";
   margin: 0px;
 }
-.team_details .team_details_innr_boxes .team_member_details .teamember_social_icon {
+.team_details .team_member_details .teamember_social_icon {
   color: black;
   margin-left: 10px;
 }
-.team_details .team_details_innr_boxes .team_member_details .teamember_social_icon:hover {
+.team_details .team_member_details .teamember_social_icon:hover {
   color: #0ad3ef;
+}
+.team_details .text_over_processbar {
+  padding-top: 40px;
+}
+.team_details .skills,
+.team_details .skills .skill,
+.team_details .skills .skill .skill-title,
+.team_details .skills .skill .skill-bar {
+  width: 100%;
+  float: left;
+}
+.team_details .skills {
+  padding: 15px 15px 15px 0px;
+}
+.team_details .skills .skill {
+  margin-bottom: 30px;
+}
+.team_details .skills .skill .skill-title {
+  color: #808080;
+  margin-bottom: 10px;
+  font-weight: 400;
+  font-size: 14px;
+}
+.team_details .skills .skill .skill-bar {
+  width: 0;
+  height: 6px;
+  background: #f0f0f0;
+  transition: 1s cubic-bezier(1, 0, 0.5, 1);
+}
+.team_details .skills.active .skill .skill-bar {
+  width: 100%;
+}
+.team_details .skills .skill .skill-bar span {
+  float: left;
+  width: 0%;
+  background: #1D91F2;
+  height: 6px;
+  position: relative;
+  transition: 1s cubic-bezier(1, 0, 0.5, 1);
+}
+.team_details .skills .skill .skill-bar span b {
+  float: left;
+  width: 100%;
+  position: relative;
+  text-align: right;
+  opacity: 0;
+  font-size: 14px;
+  color: #1D91F2;
+  font-weight: 400;
+  top: -19px;
 }
 
 .team_details_box {
@@ -2340,6 +2395,9 @@ footer .footer_ending .container .bannar_text {
   }
 }
 
+.new_contact .lets_get_sec_overlay {
+  background-color: unset;
+}
 .new_contact .team_details_box {
   padding: 10px;
 }
@@ -2370,7 +2428,8 @@ footer .footer_ending .container .bannar_text {
   padding: 20px;
   position: relative;
 }
-.new_contact .short_text_contact, .new_contact .contact_information_hding {
+.new_contact .short_text_contact,
+.new_contact .contact_information_hding {
   font-size: 16px;
   color: #fff;
   font-family: "Roboto";
